# hyprnote

./: .gitmodules  Cargo.toml  Taskfile.yaml  dprint.json  openstatus.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/cn_download/: action.yaml
.github/actions/rust_install/: action.yaml
.github/scripts/: slop-check.mjs
.github/workflows/: cactus.yaml  cli_cd.yaml  desktop_cd.yaml  desktop_ci.yaml  desktop_publish.yaml
.zed/: settings.json
apps/api/: fly.toml  openapi.gen.json
apps/api/src/: main.rs  openapi.rs  rate_limit.rs
apps/bot/src/: index.ts
apps/bot/src/devin/: index.ts
apps/bot/src/features/: index.ts
apps/cli/: Cargo.toml
apps/cli/src/: app.rs  event.rs  main.rs  runtime.rs  ui.rs
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: auth.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/auth/: context.tsx
apps/desktop/src/components/: main-app-layout.tsx
apps/desktop/src/config/: registry.ts
apps/desktop/src/contexts/: notifications.tsx
apps/desktop/src/hooks/: useAutoEnhance.ts  useDeeplinkHandler.ts  useLLMConnection.ts  useLocalSttModel.ts  useOnboardingState.ts  (+5 more)
apps/web/: content-collections.ts  package.json
apps/web/public/: robots.txt
apps/web/src/: env.ts  routeTree.gen.ts
crates/aec/: Cargo.toml
crates/am/: Cargo.toml
crates/am/src/: model.rs
crates/am2/src/: ffi.rs  lib.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs  outlit.rs  posthog.rs
crates/api-bot/: Cargo.toml
crates/api-bot/src/: config.rs  error.rs  lib.rs  openapi.rs
crates/api-bot/src/routes/: bot.rs  mod.rs  webhook.rs
crates/api-env/src/: lib.rs
crates/api-support/: Cargo.toml
crates/api-support/src/: chatwoot.rs  lib.rs
crates/cactus/: Cargo.toml
crates/cactus-model/: Cargo.toml
crates/cactus-model/src/: lib.rs
crates/cactus-sys/: Cargo.toml  build.rs  wrapper.h
crates/cactus/src/: error.rs  ffi_utils.rs  lib.rs  llm.rs  model.rs  response.rs  stt.rs
crates/cactus/tests/: integration.rs  stt.rs
crates/data/: build.rs
crates/hooks/src/: config.rs  event.rs  naming.rs
crates/listener-core/: Cargo.toml
crates/listener-core/examples/: cli.rs
crates/listener-core/src/: events.rs  runtime.rs
crates/llm-cactus/: Cargo.toml
crates/llm-cactus/src/: error.rs  service.rs
crates/llm-proxy/: Cargo.toml
crates/llm-proxy/src/: config.rs  lib.rs  model.rs  openapi.rs
crates/llm-proxy/src/handler/: mod.rs
crates/llm-types/src/: parser.rs
crates/mp3/: Cargo.toml
crates/mp3/src/: lib.rs
crates/mp3/tests/: roundtrip.rs
crates/onnx/: Cargo.toml
crates/owhisper-client/: Cargo.toml
crates/owhisper-interface/: Cargo.toml
crates/owhisper-interface/src/: batch.rs  lib.rs  openapi.rs  stream.rs
crates/progenitor-utils/src/: lib.rs  refs.rs
crates/pyannote-local/: Cargo.toml
crates/pyannote-local/src/: embedding.rs
crates/recall/: Cargo.toml
crates/recall/src/: client.rs  error.rs  lib.rs  types.rs
crates/supabase-storage/: Cargo.toml
crates/supabase-storage/src/: lib.rs
crates/transcribe-cactus/: Cargo.toml
crates/transcribe-cactus/src/service/: batch.rs  mod.rs  streaming.rs
crates/transcribe-cactus/src/service/batch/: transcribe.rs
crates/transcribe-cactus/src/service/streaming/: mod.rs  response.rs  session.rs  tests.rs
crates/transcribe-cactus/tests/: batch.rs
crates/transcribe-proxy/: Cargo.toml
crates/transcribe-proxy/src/: config.rs  env.rs  openapi.rs  supabase.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/transcript/: Cargo.toml
crates/transcript/examples/cli/: app.rs  logger.rs  main.rs
crates/transcript/examples/cli/renderer/: debug.rs  mod.rs
crates/transcript/examples/replay/: app.rs  feed.rs  main.rs  renderer.rs  source.rs  theme.rs  viewport.rs
crates/transcript/examples/replay/provider/: cactus.rs  cloud.rs  mod.rs
crates/transcript/examples/replay/renderer/: debug.rs  mod.rs  transcript.rs
crates/transcript/src/: lib.rs  view.rs
crates/transcript/src/accumulator/: channel.rs  mod.rs
crates/vad-ext/src/: lib.rs
crates/vad/benches/: vad.rs
crates/whisper-local-model/: Cargo.toml
crates/whisper-local-model/src/: lib.rs
plugins/analytics/: build.rs
plugins/analytics/js/: bindings.gen.ts
plugins/analytics/src/: lib.rs
plugins/audio-priority/src/: ext.rs  lib.rs
plugins/db2/src/: ext.rs
plugins/extensions/: Cargo.toml
plugins/extensions/src/: commands.rs
plugins/fs-db/src/: ext.rs
plugins/fs-sync/src/: commands.rs  ext.rs
plugins/hooks/: Cargo.toml
plugins/hooks/js/: bindings.gen.ts
plugins/hooks/src/: commands.rs  config.rs  docs.rs  error.rs  ext.rs  lib.rs
plugins/listener/: Cargo.toml
plugins/listener/src/: commands.rs  error.rs  events.rs  ext.rs  lib.rs  runtime.rs
plugins/listener2/: Cargo.toml
plugins/listener2/src/: ext.rs
plugins/local-llm/: Cargo.toml
plugins/local-llm/js/: bindings.gen.ts
plugins/local-llm/permissions/: default.toml
plugins/local-llm/src/: commands.rs  error.rs  ext.rs  lib.rs
plugins/local-stt/: Cargo.toml  build.rs
plugins/local-stt/js/: bindings.gen.ts
plugins/local-stt/permissions/: default.toml
plugins/local-stt/src/: commands.rs  error.rs  ext.rs  lib.rs  model.rs
plugins/notify/src/: path.rs
plugins/relay/: Cargo.toml  build.rs  package.json
plugins/relay/js/: shim.js  vite.js
plugins/relay/permissions/: default.toml
plugins/relay/permissions/autogenerated/: reference.md
plugins/relay/permissions/autogenerated/commands/: relay_result.toml
plugins/relay/permissions/schemas/: schema.json
plugins/relay/src/: commands.rs  lib.rs  relay.rs  server.rs
plugins/settings/: Cargo.toml
plugins/settings/src/: commands.rs  ext.rs
plugins/tantivy/src/: ext.rs
plugins/tray/: Cargo.toml
plugins/tray/src/: lib.rs
scripts/: passthrough.swift  setup-linux-others.sh
supabase/migrations/: 20250206000001_github_star_leads_rls.sql  20260215000000_create_transcription_jobs.sql
(+247 files in other folders)
